cif/org.eclipse.escet.cif.tests/tests/cif2plc/negative_zero_iec/proj4_TupleStruct_1.plcfunc
FUNCTION proj4_TupleStruct_1: LREAL
VAR_INPUT
    tuple: TupleStruct_1;
END_VAR

proj4_TupleStruct_1 := tuple.field4;
END_FUNCTION
